k8s/user/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user
  labels:
    name: user
    environment: development
    team: backend
