k8s/user/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-app-service
  namespace: user
spec:
  selector:
    app: user-app-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
